# kessoku

./: .gitmodules  README.md
audio_backend/: .gitignore  AudioLogic.h  CMakeLists.txt  main.cpp
audio_backend/.cmake/api/v1/reply/: cache-v2-11f1727d7f0649a12aa5.json  cache-v2-d338191785418c856028.json  cmakeFiles-v1-13898428edfbe9642499.json  cmakeFiles-v1-dfd78bc70c64001e8d70.json  codemodel-v2-303b570e41467d87b502.json  codemodel-v2-7c9f1bf3dce405e10bf4.json  directory-third_party.JUCE-Debug-d9849154f32e6101305f.json  directory-third_party.JUCE.extras.Build-Debug-5442078c54b0dc3178d5.json  directory-third_party.JUCE.extras.Build.juceaide-e3999491c816aa821130.json  (+5 more)
audio_backend/audio_backend_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
audio_backend/audio_backend_artefacts/JuceLibraryCode/Debug/: Defs.txt
backend/: .gitignore  AudioLogic.h  CMakeCache.txt  CMakeLists.txt  MainComponent.cpp  MainComponent.h  Makefile  README.md  build.bat  cmake_install.cmake  main  main.cpp  server.h
backend/app/: CMakeLists.txt
backend/app/include/: http_session.hpp  listener.hpp
backend/app/src/: AudioLogic.h  Main.cpp  MainComponent.cpp  MainComponent.h  SpectrogramComponent.h  main.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/libs/: aframe-0.9.2.min.js  aframe-ar-3.3.3.min.js
frontend/public/markers/: HRU_2.patt  pattern-HackRU_black.patt  pattern.patt
frontend/src/: App.js  index.css
frontend/src/components/: Carousel.css  Carousel.js  Customize.js  InitialScene.js  Landing.js  Overlay.js
